<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text"
        style="@style/TextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/second_text"
        android:textAlignment="center" />

    <Button
        android:id="@+id/sportButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text"
        android:layout_margin="12dp"
        android:background="@color/colorPrimary"
        android:onClick="sportsButton"
        android:text="@string/sport" />

    <Button
        android:id="@+id/artButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sportButton"
        android:layout_margin="12dp"
        android:background="@color/colorPrimary"
        android:onClick="artButton"
        android:text="@string/art" />

    <Button
        android:id="@+id/historyButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/artButton"
        android:layout_margin="12dp"
        android:background="@color/colorPrimary"
        android:onClick="historyButton"
        android:text="@string/history" />

    <Button
        android:id="@+id/entertaimentButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/historyButton"
        android:layout_margin="12dp"
        android:background="@color/colorPrimary"
        android:onClick="entertaimentButton"
        android:text="@string/entertaiment" />

    <Button
        android:id="@+id/architectureButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/entertaimentButton"
        android:layout_margin="12dp"
        android:background="@color/colorPrimary"
        android:onClick="architectureButton"
        android:text="@string/architecture" />

</LinearLayout>
</ScrollView>